--- a/client/tutorial.ui
+++ b/client/tutorial.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>481</width>
-    <height>316</height>
+    <width>680</width>
+    <height>457</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,8 +23,8 @@ font: 14pt &quot;Segoe UI&quot;;</string>
     <rect>
      <x>10</x>
      <y>-30</y>
-     <width>231</width>
-     <height>121</height>
+     <width>571</width>
+     <height>131</height>
     </rect>
    </property>
    <property name="text">
@@ -34,8 +34,8 @@ font: 14pt &quot;Segoe UI&quot;;</string>
   <widget class="QPushButton" name="button_next">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>270</y>
+     <x>560</x>
+     <y>400</y>
      <width>83</width>
      <height>29</height>
     </rect>
@@ -47,8 +47,8 @@ font: 14pt &quot;Segoe UI&quot;;</string>
   <widget class="QPushButton" name="button_back">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>270</y>
+     <x>30</x>
+     <y>400</y>
      <width>83</width>
      <height>29</height>
     </rect>
@@ -57,22 +57,14 @@ font: 14pt &quot;Segoe UI&quot;;</string>
     <string>back</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_content">
+  <widget class="QTextBrowser" name="label_content">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>70</y>
-     <width>451</width>
-     <height>161</height>
+     <y>110</y>
+     <width>651</width>
+     <height>261</height>
     </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(48, 97, 72);
-color: rgb(255, 255, 255);
-font: 14pt &quot;Segoe UI&quot;;</string>
-   </property>
-   <property name="text">
-    <string>Tutorial</string>
    </property>
   </widget>
  </widget>
