--- a/client/form.ui
+++ b/client/form.ui
@@ -55,7 +55,7 @@ font: 14pt &quot;Segoe UI&quot;;</string>
      <enum>QTabWidget::TabShape::Triangular</enum>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>0</number>
     </property>
     <property name="iconSize">
      <size>
@@ -132,11 +132,13 @@ color: rgb(0, 0, 0);
 background-color: rgb(85, 170, 127);</string>
          </property>
          <property name="rowCount">
-          <number>5</number>
+          <number>7</number>
          </property>
          <attribute name="horizontalHeaderDefaultSectionSize">
           <number>184</number>
          </attribute>
+         <row/>
+         <row/>
          <row/>
          <row/>
          <row/>
@@ -167,11 +169,13 @@ color: rgb(0, 0, 0);
 background-color: rgb(85, 170, 127);</string>
          </property>
          <property name="rowCount">
-          <number>5</number>
+          <number>7</number>
          </property>
          <attribute name="horizontalHeaderDefaultSectionSize">
           <number>184</number>
          </attribute>
+         <row/>
+         <row/>
          <row/>
          <row/>
          <row/>
@@ -240,11 +244,13 @@ color: rgb(0, 0, 0);
 background-color: rgb(85, 170, 127);</string>
          </property>
          <property name="rowCount">
-          <number>5</number>
+          <number>7</number>
          </property>
          <attribute name="horizontalHeaderDefaultSectionSize">
           <number>184</number>
          </attribute>
+         <row/>
+         <row/>
          <row/>
          <row/>
          <row/>
@@ -275,41 +281,11 @@ color: rgb(0, 0, 0);
 background-color: rgb(85, 170, 127);</string>
          </property>
          <property name="rowCount">
-          <number>50</number>
+          <number>20</number>
          </property>
          <attribute name="horizontalHeaderDefaultSectionSize">
           <number>184</number>
          </attribute>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
-         <row/>
          <row/>
          <row/>
          <row/>
@@ -873,52 +849,48 @@ background-color: rgb(85, 170, 127);</string>
       </widget>
      </widget>
     </widget>
- <widget class="QWidget" name="tab_5">
- <attribute name="title">
-  <string>Achievements</string>
- </attribute>
-
- <!-- Title Label -->
- <widget class="QLabel" name="label_5">
-  <property name="geometry">
-   <rect>
-    <x>360</x>
-    <y>20</y>
-    <width>461</width>
-    <height>90</height>
-   </rect>
-  </property>
-  <property name="styleSheet">
-   <string notr="true">font: 28pt "Segoe UI";
+    <widget class="QWidget" name="tab_5">
+     <attribute name="title">
+      <string>Achievements</string>
+     </attribute>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>20</y>
+        <width>461</width>
+        <height>90</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 28pt &quot;Segoe UI&quot;;
 color: rgb(108, 216, 160);
 background-color:transparent;
 text-decoration: underline;</string>
-  </property>
-  <property name="text">
-   <string>Your Achievements</string>
-  </property>
- </widget>
-
- <!-- ✅ Container for dynamic checkboxes -->
- <widget class="QWidget" name="achievementsContainer">
-  <property name="geometry">
-   <rect>
-    <x>390</x>
-    <y>150</y>
-    <width>400</width>
-    <height>521</height>
-   </rect>
-  </property>
-  <property name="styleSheet">
-   <string notr="true">
+      </property>
+      <property name="text">
+       <string>Your Achievements</string>
+      </property>
+     </widget>
+     <widget class="QWidget" name="achievementsContainer">
+      <property name="geometry">
+       <rect>
+        <x>390</x>
+        <y>150</y>
+        <width>400</width>
+        <height>521</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">
 background-color: rgb(64, 65, 66);
 border: 2px solid rgb(108, 216, 160);
 </string>
-  </property>
-  <layout class="QVBoxLayout" name="verticalLayout"/>
- </widget>
-</widget>
-       <widget class="QWidget" name="tab_4">
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout"/>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_4">
      <attribute name="title">
       <string>Guides/Tutorial</string>
      </attribute>
@@ -998,7 +970,7 @@ background-color: rgb(64, 65, 66);</string>
         <string>A</string>
        </property>
       </item>
-</widget>
+     </widget>
     </widget>
     <widget class="QWidget" name="Profil">
      <attribute name="title">
@@ -1018,6 +990,9 @@ background-color: rgb(64, 65, 66);</string>
 color: rgb(0, 0, 0);
 background-color: rgb(85, 170, 127);</string>
       </property>
+      <property name="rowCount">
+       <number>10</number>
+      </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
        <number>133</number>
       </attribute>
@@ -1031,9 +1006,17 @@ background-color: rgb(85, 170, 127);</string>
         <string/>
        </property>
       </row>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
       <column>
        <property name="text">
-        <string>Achivments</string>
+        <string>Achievements</string>
        </property>
       </column>
       <column>
@@ -1043,22 +1026,22 @@ background-color: rgb(85, 170, 127);</string>
       </column>
       <item row="0" column="0">
        <property name="text">
-        <string>Erste schritte</string>
+        <string/>
        </property>
       </item>
       <item row="0" column="1">
        <property name="text">
-        <string>1.000</string>
+        <string/>
        </property>
       </item>
       <item row="1" column="0">
        <property name="text">
-        <string>A</string>
+        <string/>
        </property>
       </item>
       <item row="1" column="1">
        <property name="text">
-        <string>2.000</string>
+        <string/>
        </property>
       </item>
      </widget>
@@ -1087,7 +1070,7 @@ text-decoration: underline;
        <rect>
         <x>10</x>
         <y>190</y>
-        <width>661</width>
+        <width>681</width>
         <height>511</height>
        </rect>
       </property>
@@ -1096,9 +1079,28 @@ text-decoration: underline;
 color: rgb(0, 0, 0);
 background-color: rgb(85, 170, 127);</string>
       </property>
+      <property name="rowCount">
+       <number>20</number>
+      </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
        <number>160</number>
       </attribute>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
+      <row/>
       <row/>
       <row/>
       <row/>
@@ -1125,82 +1127,82 @@ background-color: rgb(85, 170, 127);</string>
       </column>
       <item row="0" column="0">
        <property name="text">
-        <string>a</string>
+        <string/>
        </property>
       </item>
       <item row="0" column="1">
        <property name="text">
-        <string>30.000</string>
+        <string/>
        </property>
       </item>
       <item row="0" column="2">
        <property name="text">
-        <string>+0,4</string>
+        <string/>
        </property>
       </item>
       <item row="0" column="3">
        <property name="text">
-        <string>12.000</string>
+        <string/>
        </property>
       </item>
       <item row="1" column="0">
        <property name="text">
-        <string>b</string>
+        <string/>
        </property>
       </item>
       <item row="1" column="1">
        <property name="text">
-        <string>5.000</string>
+        <string/>
        </property>
       </item>
       <item row="1" column="2">
        <property name="text">
-        <string>-0,2</string>
+        <string/>
        </property>
       </item>
       <item row="1" column="3">
        <property name="text">
-        <string>-2.500</string>
+        <string/>
        </property>
       </item>
       <item row="2" column="0">
        <property name="text">
-        <string>c</string>
+        <string/>
        </property>
       </item>
       <item row="2" column="1">
        <property name="text">
-        <string>4.000</string>
+        <string/>
        </property>
       </item>
       <item row="2" column="2">
        <property name="text">
-        <string>+0,07</string>
+        <string/>
        </property>
       </item>
       <item row="2" column="3">
        <property name="text">
-        <string>280</string>
+        <string/>
        </property>
       </item>
       <item row="3" column="0">
        <property name="text">
-        <string>d</string>
+        <string/>
        </property>
       </item>
       <item row="3" column="1">
        <property name="text">
-        <string>20.000</string>
+        <string/>
        </property>
       </item>
       <item row="3" column="2">
        <property name="text">
-        <string>+0,4</string>
+        <string/>
        </property>
       </item>
       <item row="3" column="3">
        <property name="text">
-        <string>8.000</string>
+        <string/>
        </property>
       </item>
      </widget>
