--- a/client/register.ui
+++ b/client/register.ui
@@ -88,8 +88,8 @@ font: 16pt &quot;Segoe UI&quot;;
   <widget class="QPushButton" name="pushButton_register">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>520</y>
+     <x>570</x>
+     <y>510</y>
      <width>100</width>
      <height>50</height>
     </rect>
@@ -100,6 +100,9 @@ color: rgb(108, 217, 161);</string>
    </property>
    <property name="text">
     <string>Register</string>
+   </property>
+   <property name="default">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_username">
@@ -171,6 +174,24 @@ background-color: transparent;</string>
    </property>
    <property name="text">
     <string>Register</string>
+   </property>
+  </widget>
+  <widget class="QCommandLinkButton" name="commandLinkButton">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>590</y>
+     <width>371</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: transparent;
+text-decoration: underline;
+font: 16pt &quot;Segoe UI&quot;;</string>
+   </property>
+   <property name="text">
+    <string>Already have an account?</string>
    </property>
   </widget>
  </widget>
