--- a/client/login.ui
+++ b/client/login.ui
@@ -143,7 +143,7 @@ color: rgb(255, 255, 255);</string>
     <enum>QLineEdit::EchoMode::Password</enum>
    </property>
   </widget>
-  <widget class="QCommandLinkButton" name="commandLinkButton">
+  <widget class="QCommandLinkButton" name="Register">
    <property name="geometry">
     <rect>
      <x>120</x>
